<resources>
    <string name="app_name">Movie</string>
    <string name="movies_discover">Discover</string>
    <string name="movies_see_all">See All</string>
    <string name="movies_most_popular">Most Popular</string>
    <string name="movies_upcoming">Upcoming</string>
    <string name="movies_top_rated">Top Rated</string>
    <string name="foundation_movies">Movies</string>
    <string name="foundation_search">Search</string>
    <string name="foundation_profile">Profile</string>
</resources>
